# GripApertureRedux

./: .gitignore  README.md  experiment.py  pyproject.toml
ExpAssets/Config/: GripApertureRedux_independent_variables.py  GripApertureRedux_params.py  GripApertureRedux_schema.sql  GripApertureRedux_user_queries.json
ExpAssets/Data/incomplete/: p9.2025-01-15_incomplete.txt
ExpAssets/Resources/code/: Kinematics.py  NatNetClient.py  OptiTracker.py  Parser.py  natnetclient_rough.py  test_OptiTracker.py  vectorizer.py
ExpAssets/Resources/code/bak/: OptiTracker.py  natnetclient_rough.py  test_outputs_OptiTracker.py
ExpAssets/Resources/code/bak.bak/: OptiTracker.py  natnetclient_rough.py
OptiData/1/practice/GBYK/: trial_1_hand_markers.csv
OptiData/10/practice/KBYG/: trial_1_hand_markers.csv  trial_2_hand_markers.csv  trial_3_hand_markers.csv  trial_4_hand_markers.csv  trial_5_hand_markers.csv  trial_6_hand_markers.csv  trial_7_hand_markers.csv
OptiData/11/practice/KBYG/: trial_1_hand_markers.csv  trial_2_hand_markers.csv  trial_3_hand_markers.csv  trial_4_hand_markers.csv  trial_5_hand_markers.csv  trial_6_hand_markers.csv  trial_7_hand_markers.csv  trial_8_hand_markers.csv
OptiData/13/practice/GBYK/: trial_1_hand_markers.csv
OptiData/14/practice/GBYK/: trial_1_hand_markers.csv  trial_2_hand_markers.csv
OptiData/15/practice/GBYK/: trial_1_hand_markers.csv  trial_2_hand_markers.csv
OptiData/16/practice/GBYK/: trial_1_hand_markers.csv  trial_2_hand_markers.csv  trial_3_hand_markers.csv  trial_4_hand_markers.csv  trial_5_hand_markers.csv  (+1 more)
(+246 files in other folders)
